--- a/BulkyBook.Utility/BulkyBook.Utility.csproj
+++ b/BulkyBook.Utility/BulkyBook.Utility.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="3.1.0" />
+    <PackageReference Include="SendGrid" Version="9.15.0" />
   </ItemGroup>
 
 </Project>
